--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@js-egton/react-element-to-jsx-string",
-  "version": "15.0.2",
+  "version": "15.0.3",
   "description": "Turn a ReactElement into the corresponding JSX string.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -24,7 +24,10 @@
     "smoke": "node tests/smoke/run"
   },
   "lint-staged": {
-    "*.js": ["prettier --write \"**/*.{js,json}\"", "git add"]
+    "*.js": [
+      "prettier --write \"**/*.{js,json}\"",
+      "git add"
+    ]
   },
   "author": {
     "name": "Algolia, Inc.",
@@ -80,11 +83,14 @@
   },
   "dependencies": {
     "@base2/pretty-print-object": "1.0.2",
+    "flatted": "^2.0.2",
     "is-plain-object": "5.0.0",
     "react-is": "18.2.0"
   },
   "jest": {
-    "setupFilesAfterEnv": ["<rootDir>tests/setupTests.js"]
+    "setupFilesAfterEnv": [
+      "<rootDir>tests/setupTests.js"
+    ]
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
